Add University of Utah slab

--- a/index.html
+++ b/index.html
@@ -144,6 +144,73 @@ event:"gtm.linkClick"})})})})(jQuery);</script>
 </section> 
 </div>
 
+<!-- Jamf Nation Third Party Product Repos -->
+<div class="slab theme--athens-gray">
+    <section class="slab__content clearfix">
+        <div class="slab__block-container--contained">
+            <div class="slab__headline">
+                <h2 class="text-center"> Jamf Nation Resources. </h2>
+                <div class="text-center"> <p>Use these in Jamf Pro to do more.</p>
+                </div>
+            </div>
+            <div class="col-sm-12 ">
+                <div class="content"> <p><a href="https://www.jamf.com/products/jamf-pro/">Jamf Pro</a> in a framework that provides for a number of ways to interact with client systems. This includes Extension Attributes, Scripts, and Package Manifests. <em>Some older systems can make use of Managed Preference Manifests as well.</em></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 ">
+                    <div class="iconed-content iconed-content--left">
+                        <div class="iconed-content__icon"> <i class="jcon-book theme-text--keppel" aria-hidden="true" role="presentation"> </i>
+                        </div>
+                        <div class="iconed-content__headline">
+                            <h3>Scripts</h3>
+                        </div> <div class="iconed-content__content"> <p>Run <a href="http://github.com/jamf/jamf-nation-scripts/">Scripts</a> on client computers to perform custom actions. Anything you can script can be automated in Jamf Pro.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 ">
+                    <div class="iconed-content iconed-content--left">
+                        <div class="iconed-content__icon"> <i class="jcon-learning theme-text--cinnabar" aria-hidden="true" role="presentation"> </i>
+                        </div>
+                        <div class="iconed-content__headline">
+                            <h3>Extension Attributes</h3>
+                        </div>
+                        <div class="iconed-content__content"> <p><a href="http://github.com/jamf/jamf-nation-extension-attributes/">Extension Attributes</a> run a script on a client computer and respond with information that you can then use to scope policies and settings.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 ">
+                    <div class="iconed-content iconed-content--left">
+                        <div class="iconed-content__icon"> <i class="jcon-binoculars theme-text--wild-blue-yonder" aria-hidden="true" role="presentation"> </i>
+                        </div>
+                        <div class="iconed-content__headline">
+                            <h3>Package Manifests</h3>
+                        </div>
+                        <div class="iconed-content__content"> <p>Composer comes with over 100 package manifests. Get more <a href="https://github.com/jamf/Jamf-Nation-Package-Manifests">Package Manifests</a> in this GitHub repository.</p> </div> </div> </div>   <div class="col-sm-6 "> <!-- block: iconed_content -->  <div class="iconed-content iconed-content--left">
+                            <div class="iconed-content__icon"> <i class="jcon-list-4 theme-text--keppel" aria-hidden="true" role="presentation"> </i>
+                            </div>
+                            <div class="iconed-content__headline">
+                                <h3>Older Resources</h3>
+                            </div>
+                            <div class="iconed-content__content"> <p>
+                                <a href="http://github.com/jamf/jamf-nation-extension-attributes/">Managed Preference Manifests</a> are no longer supported by Apple but our old entries can be found here. <a href="https://github.com/jamf/Jamf-Nation-Licensed-Software-Templates" class="yui3-button primary-button">The Licensed Software Templates</a> are from original Jamf Resource Kit.</p>
+                            </div>
+                        </div>
+                        </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 "> <p></p>
+            </div>
+        </div>
+        </div>
+</div>
+</div>
+</section>
+</div>
+</div>
 
 <!-- Slab for learning how to use our stuffs -->	
 <div class="slab--resource"> 
@@ -164,75 +231,95 @@ event:"gtm.linkClick"})})})})(jQuery);</script>
 </div>  
 </div>
 
-
-<!-- Jamf Nation Third Party Product Repos -->
-<div class="slab theme--athens-gray">   
-	<section class="slab__content clearfix"> 
-	<div class="slab__block-container--contained"> 
-		<div class="slab__headline"> 
-		<h2 class="text-center"> Jamf Nation Resources. </h2> 
-			<div class="text-center"> <p>Use these in Jamf Pro to do more.</p> 
-			</div> 
-		</div>    
-			<div class="col-sm-12 ">
-				<div class="content"> <p><a href="https://www.jamf.com/products/jamf-pro/">Jamf Pro</a> in a framework that provides for a number of ways to interact with client systems. This includes Extension Attributes, Scripts, and Package Manifests. <em>Some older systems can make use of Managed Preference Manifests as well.</em></p> 
-				</div> 
-			</div>  
-				<div class="row">   
-					<div class="col-sm-6 ">
-						<div class="iconed-content iconed-content--left"> 
-							<div class="iconed-content__icon"> <i class="jcon-book theme-text--keppel" aria-hidden="true" role="presentation"> </i> 
-							</div> 
-								<div class="iconed-content__headline"> 
-								<h3>Scripts</h3> 
-								</div> <div class="iconed-content__content"> <p>Run <a href="http://github.com/jamf/jamf-nation-scripts/">Scripts</a> on client computers to perform custom actions. Anything you can script can be automated in Jamf Pro.</p> 
-							</div> 
-						</div> 
-					</div>   
-					<div class="col-sm-6 "> 
-						<div class="iconed-content iconed-content--left"> 
-							<div class="iconed-content__icon"> <i class="jcon-learning theme-text--cinnabar" aria-hidden="true" role="presentation"> </i> 
-							</div> 
-								<div class="iconed-content__headline"> 
-								<h3>Extension Attributes</h3> 
-								</div> 
-								<div class="iconed-content__content"> <p><a href="http://github.com/jamf/jamf-nation-extension-attributes/">Extension Attributes</a> run a script on a client computer and respond with information that you can then use to scope policies and settings.</p> 
-								</div> 
-							</div>  
-						</div>  
-					</div>
-					<div class="row">  
-						<div class="col-sm-6 ">
-							<div class="iconed-content iconed-content--left"> 
-								<div class="iconed-content__icon"> <i class="jcon-binoculars theme-text--wild-blue-yonder" aria-hidden="true" role="presentation"> </i> 
-								</div> 
-								<div class="iconed-content__headline"> 
-								<h3>Package Manifests</h3> 
-							</div> 
-							<div class="iconed-content__content"> <p>Composer comes with over 100 package manifests. Get more <a href="https://github.com/jamf/Jamf-Nation-Package-Manifests">Package Manifests</a> in this GitHub repository.</p> </div> </div> </div>   <div class="col-sm-6 "> <!-- block: iconed_content -->  <div class="iconed-content iconed-content--left"> 
-								<div class="iconed-content__icon"> <i class="jcon-list-4 theme-text--keppel" aria-hidden="true" role="presentation"> </i> 
-								</div> 
-							<div class="iconed-content__headline"> 
-							<h3>Older Resources</h3> 
-							</div> 
-							<div class="iconed-content__content"> <p>
-							<a href="http://github.com/jamf/jamf-nation-extension-attributes/">Managed Preference Manifests</a> are no longer supported by Apple but our old entries can be found here. <a href="https://github.com/jamf/Jamf-Nation-Licensed-Software-Templates" class="yui3-button primary-button">The Licensed Software Templates</a> are from original Jamf Resource Kit.</p> 
-							</div> 
-						</div> 
-					</div>  
-				</div>
-			</div>
-			<div class="row">  
-				<div class="col-sm-6 "> <p></p> 
-				</div> 
-			</div> 
-		</div> 
-	</div>
+<!-- University of Utah Slab -->
+<div class="slab theme--athens-gray">
+    <section class="slab__content clearfix">
+        <div class="slab__block-container--contained">
+            <div class="slab__headline">
+                <h2 class="text-center"> Repos From The University Of Utah </h2>
+                <div class="text-center"> <p>Some Great Tools From Some Great People</p>
+                </div>
+            </div>
+            <div class="col-sm-12 ">
+                <div class="content"> <p><a href="https://github.com/univ-of-utah-marriott-library-apple">The University of Utah Marriott Library Apple Support Team</a> has been a great contributor of content for extending the use of Jamf Pro in various environments and we welcome their continued support!</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 ">
+                    <div class="iconed-content iconed-content--left">
+                        <div class="iconed-content__icon"> <i class aria-hidden="true" role="presentation"> </i>
+                        </div>
+                        <div class="iconed-content__headline">
+                            <h3><a href="https://github.com/univ-of-utah-marriott-library-apple/blade_runner">Blade Runner</a></h3>
+                        </div> <div class="iconed-content__content"> <p>Automates and implements a framework to offboard, secure erase and document deprecated Mac systems.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 ">
+                    <div class="iconed-content iconed-content--left">
+                        <div class="iconed-content__icon"> <i class=aria-hidden="true" role="presentation"> </i>
+                        </div>
+                        <div class="iconed-content__headline">
+                            <h3><a href="https://github.com/univ-of-utah-marriott-library-apple/recce">Recce</a></h3>
+                        </div>
+                        <div class="iconed-content__content"> <p>A tool to add unmanaged computers to JAMF.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 ">
+                    <div class="iconed-content iconed-content--left">
+                        <div class="iconed-content__icon"> <i class=aria-hidden="true" role="presentation"> </i>
+                        </div>
+                        <div class="iconed-content__headline">
+                            <h3><a href="https://github.com/univ-of-utah-marriott-library-apple/aeios">AEiOS</a></h3>
+                        </div>
+                        <div class="iconed-content__content"> <p>Automate iOS device enrollment, configuration and imaging.</p> </div> </div> </div>
+                <div class="col-sm-6 "> <!-- block: iconed_content -->  <div class="iconed-content iconed-content--left">
+                            <div class="iconed-content__icon"> <i class=aria-hidden="true" role="presentation"> </i>
+                            </div>
+                            <div class="iconed-content__headline">
+                                <h3><a href="https://github.com/univ-of-utah-marriott-library-apple/firmware_password_manager">Firmware Password Manager</a></h3>
+                            </div>
+                            <div class="iconed-content__content"> <p>Manages the firmware passwords of their computers.</p>
+                            </div>
+                        </div>
+                        </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-sm-6 ">
+                    <div class="iconed-content iconed-content--left">
+                        <div class="iconed-content__icon"> <i class=aria-hidden="true" role="presentation"> </i>
+                        </div>
+                        <div class="iconed-content__headline">
+                            <h3><a href="https://github.com/univ-of-utah-marriott-library-apple/scl_jamf_tools">SCL Jamf Tools</a></h3>
+                        </div>
+                        <div class="iconed-content__content"> <p>A collection of tools written to perform as enhancements to Jamf Pro.</p> </div> </div> </div>
+                <div class="col-sm-6 "> <!-- block: iconed_content -->  <div class="iconed-content iconed-content--left">
+                    <div class="iconed-content__icon"> <i class=aria-hidden="true" role="presentation"> </i>
+                    </div>
+                    <div class="iconed-content__headline">
+                        <h3><a href="https://github.com/univ-of-utah-marriott-library-apple/scl_jamf_extension_attribute_collection">SCL JAMF Pro Extension Attributes</a></h3>
+                    </div>
+                    <div class="iconed-content__content"> <p>SCL JAMF Pro Extension Attribute Collection.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="row">
+            <div class="col-sm-6 "> <p></p>
+            </div>
+        </div>
+        </div>
 </div>
-</section> 
 </div>
-</div>	
-	
+</section>
+</div>
+</div>
 
 <!-- Links to our repo and the actual page -->	
 <div class="slab theme--aqua-haze">  
